@@ -3,7 +3,7 @@
 	VGA mode set tables for vid_vga.c
 	from quake1 source with minor adaptations for uhexen2.
 
-	$Id: vgamodes.h,v 1.1 2007-10-22 18:07:52 sezero Exp $
+	$Id$
 
 	Copyright (C) 1996-1997  Id Software, Inc.
 
