@@ -4,6 +4,9 @@ Development Progress	:
 ---------------------------
 
 2011-06-13 (SVN):
+    * Moved several dos driver sources under h2shared.
+
+2011-06-13 (SVN):
     * bgmusic.c, snd_codec.h, snd_codeci.h: Changed MIDIDRIVER_MID back
       to 1U<<31. Changed other music types as shifts of 1U instead of 1.
 
